# algorithms

01_Arrays/src/homework/ArrayMax/: array_max.cc
01_Arrays/src/homework/ArrayTop/: TopX.cpp
01_Arrays/src/homework/UniqueNumbers/: ArrayUnique.cpp
01_Arrays/src/homework/UniqueSorted/: ArraySorted.cpp  ArraySorted.h
03_HashMaps/: CMakeLists.txt
03_HashMaps/src/examples/Dynamic/: DynamicArray.cpp  HashMap.cpp
03_HashMaps/src/homework/HashFunctions/: HashFunctions.cpp
03_HashMaps/src/homework/HashMapsAreFast/: HashMapsAreFast.cpp
03_HashMaps/src/homework/VeryDynamic/: DynamicHashMap.cpp  VeryDynamicArray.cpp
04_Standard_Structures/List/: CMakeLists.txt  List.h  Main.cpp
04_Standard_Structures/Stack/: CMakeLists.txt  Main.cpp  Stack.h
05_Standard_Structures2/: CMakeLists.txt  DLList.h  Main.cpp
06_Sorting/homework/Comparator/: Book.h  BookComparator.h
06_Sorting/homework/SortAlgorithms/: BubbleSort.h  CountingSort.h  InsertionSort.h
06_Sorting/test/homework/: BookComparatorTest.cpp  SortTest.cpp
07_Recursion/homework/BacktrackingResursion/: BruteForceRecursion.h  BruteForceRecursionTest.cpp
07_Recursion/homework/MergeSortRecursion/: MergeSortRecursion.h  MergeSortRecursionTest.cpp
07_Recursion/homework/SimpleRecursion/: SimpleRecursion.h  SimpleRecursionTest.cpp
08_QSort/: Sorting.h
